[gd_scene load_steps=11 format=3 uid="uid://blva671neb6c1"]

[ext_resource type="Script" uid="uid://by8177pff6f1v" path="res://Scripts/hud.gd" id="1_3jfbl"]
[ext_resource type="Texture2D" uid="uid://dtj56u4nyacec" path="res://Assets/Gui/Health/health_border.png" id="1_chfh5"]
[ext_resource type="Texture2D" uid="uid://ck4yo4v1s8f74" path="res://Assets/Gui/Health/health.png" id="2_8vcfy"]
[ext_resource type="Texture2D" uid="uid://b6khfrsxvaq67" path="res://Assets/Gui/Health/mana.png" id="3_puttd"]
[ext_resource type="FontFile" uid="uid://du8tl1a6818n" path="res://Assets/Fonts/Unispace Rg.otf" id="5_duido"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8vcfy"]
texture = ExtResource("1_chfh5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_puttd"]
texture = ExtResource("2_8vcfy")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3jfbl"]
texture = ExtResource("1_chfh5")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3j5vs"]
texture = ExtResource("3_puttd")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_duido"]
size = Vector2(200, 30)

[node name="Hud" type="CanvasGroup"]
script = ExtResource("1_3jfbl")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="healthBar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -384.0
offset_top = -312.0
offset_right = -208.0
offset_bottom = -296.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxTexture_8vcfy")
theme_override_styles/fill = SubResource("StyleBoxTexture_puttd")
value = 50.0
show_percentage = false

[node name="manaBar" type="ProgressBar" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -568.0
offset_top = -312.0
offset_right = -392.0
offset_bottom = -296.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/background = SubResource("StyleBoxTexture_3jfbl")
theme_override_styles/fill = SubResource("StyleBoxTexture_3j5vs")
value = 50.0
fill_mode = 1
show_percentage = false

[node name="Score" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 464.0
offset_top = -320.0
offset_right = 556.0
offset_bottom = -259.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_duido")
theme_override_font_sizes/font_size = 50
text = "100"

[node name="GameOverLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.0
offset_top = -40.0
offset_right = 232.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(168, 30)
theme_override_fonts/font = ExtResource("5_duido")
theme_override_font_sizes/font_size = 50
text = "GAME OVER !"

[node name="btn_MainMenu" type="TouchScreenButton" parent="CanvasLayer/GameOverLabel"]
position = Vector2(168, 128)
shape = SubResource("RectangleShape2D_duido")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/GameOverLabel/btn_MainMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -96.0
offset_top = -16.0
offset_right = 96.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.151276, 0.151276, 0.151276, 1)

[node name="GameOverLabel" type="Label" parent="CanvasLayer/GameOverLabel/btn_MainMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -18.5
offset_right = 82.5
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("5_duido")
theme_override_font_sizes/font_size = 30
text = "Main Menu"

[connection signal="pressed" from="CanvasLayer/GameOverLabel/btn_MainMenu" to="." method="_on_touch_screen_button_pressed"]
